--- a/examples.html
+++ b/examples.html
@@ -21,6 +21,11 @@
             <a href="./services.html">Services</a>
         </ul>
     </div>
+    <div class="socials">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+    </div>
 </body>
 
 </html>
