changed format of the social media icons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="./examples.html">Examples</a>
         </ul>
     </div>
-    <div class="socials">
+    <div class="nav">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-twitter"></i>
         <i class="fa fa-instagram"></i>
