updated socials container

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <a href="./examples.html">Examples</a>
         </ul>
     </div>
-    <div class="nav">
+    <div class="socials">
         <i class="fa fa-facebook"></i>
-        <i class="fa fa-twitter"></i>
+        <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
 </body>
