--- a/about.html
+++ b/about.html
@@ -11,11 +11,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
-    <h1>This is the about page</h1>
+    <header>
+        <div class="inner_header">
+            <div class="logo_container">
+                <h1><span>About</span></h1>
+            </div>
+            <img class="opus_logo" src="./images/opus.svg" />
+        </div>
+    </header>
     <div class="nav">
         <ul>
             <a href="./index.html">Home</a>
@@ -25,7 +31,7 @@
     </div>
     <div class="socials">
         <i class="fa fa-facebook"></i>
-        <i class="fa fa-twitter"></i>
+        <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
 </body>
