--- a/services.html
+++ b/services.html
@@ -14,7 +14,14 @@
 </head>
 
 <body>
-    <h1>This is the services page</h1>
+    <header>
+        <div class="inner_header">
+            <div class="logo_container">
+                <h1><span>Services</span></h1>
+            </div>
+            <img class="opus_logo" src="./images/opus.svg" />
+        </div>
+    </header>
     <div class="nav">
         <ul>
             <a href="./index.html">Home</a>
@@ -24,7 +31,7 @@
     </div>
     <div class="socials">
         <i class="fa fa-facebook"></i>
-        <i class="fa fa-twitter"></i>
+        <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
 </body>
