added background image to the index file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="./images/opus.svg" type="image/icon type">
-
+    <style>
+        body {
+            height: 200vh;
+            background-image: url("./images/Opus-Logo2.jpg");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+    </style>
 </head>
 
 <body>
