--- a/examples.html
+++ b/examples.html
@@ -37,6 +37,7 @@
         <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
