--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
-    <div class="about_me">
+    <section class="about_me">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
             molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
             numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
@@ -58,7 +58,8 @@
             modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam
             totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam
             quasi aliquam eligendi, placeat qui corporis!</p>
-    </div>
+    </section>
+    <script src="index.js"></script>
 </body>
 
 </html>
