--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             background-repeat: no-repeat;
             background-size: 100% 100%;
         }
+
+        .socials {
+            background-color: #101010;
+            display: flex;
+            justify-content: space-evenly;
+            font-size: 35px;
+            margin-bottom: 30px;
+        }
     </style>
 </head>
 
@@ -43,6 +51,7 @@
         <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
