Added audio file

--- a/examples.html
+++ b/examples.html
@@ -37,6 +37,13 @@
         <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
+    <section class="examples">
+        <figure>
+            <figcaption>Listen to the Test:</figcaption>
+            <audio controls src="./audio/Recording.m4a">
+            </audio>
+        </figure>
+    </section>
     <script src="index.js"></script>
 </body>
 
