--- a/examples.html
+++ b/examples.html
@@ -37,7 +37,28 @@
         <a href="https://mobile.twitter.com/wesleyopus" target="_blank"><i class="fa fa-twitter"></i></a>
         <i class="fa fa-instagram"></i>
     </div>
+    <div class="graphic">
+        <img src="./images/Opus-Logo2.jpg" />
+    </div>
     <section class="examples">
+        <figure>
+            <figcaption>Listen to the Test:</figcaption>
+            <audio controls src="./audio/Recording.m4a">
+            </audio>
+        </figure>
+        <br>
+        <figure>
+            <figcaption>Listen to the Test:</figcaption>
+            <audio controls src="./audio/Recording.m4a">
+            </audio>
+        </figure>
+        <br>
+        <figure>
+            <figcaption>Listen to the Test:</figcaption>
+            <audio controls src="./audio/Recording.m4a">
+            </audio>
+        </figure>
+        <br>
         <figure>
             <figcaption>Listen to the Test:</figcaption>
             <audio controls src="./audio/Recording.m4a">
